--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "@eumentis-cloud/limit-s3-db-backups",
   "version": "1.0.0",
   "description": "Package to limit the DB backups to be stored in a project DB backup bucket.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eumentis-cloud/limit-s3-db-backups.git"
+  },
   "main": "index.js",
   "author": "Pawan Samdani",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/eumentis-cloud/limit-s3-db-backups/issues"
+  },
+  "homepage": "https://github.com/eumentis-cloud/limit-s3-db-backups#readme"
 }
